Atualização da tela perfil prestador visão cliente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MainActivit</string>
+    <string name="Empresa">Bauen</string>
+    <string name="Slogan">Conectando a solução a você</string>
 </resources>
