Atualização de telas e tirando bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="Empresa">Bauen</string>
     <string name="Slogan">Conectando a solução a você</string>
+    <string name="app_name">App Name here</string>
 </resources>
