--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="Empresa">Bauen</string>
     <string name="Slogan">Conectando a solução a você</string>
-    <string name="app_name">App Name here</string>
+    <string name="first_fragment_label">Teste</string>
+    <string name="second_fragment_label">Teste</string>
+    <string name="app_name">Aplicativo</string>
 </resources>
