Criação histórico de conversas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="first_fragment_label">Teste</string>
     <string name="second_fragment_label">Teste</string>
     <string name="app_name">Aplicativo</string>
+    <string name="novaa">NOVA</string>
 </resources>
