definindo variaveis pro histórico de chat

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="Empresa">Bauen</string>
     <string name="Slogan">Conectando a solução a você</string>
+    <string name="first_fragment_label">Teste</string>
+    <string name="second_fragment_label">Teste</string>
+    <string name="app_name">Aplicativo</string>
+    <string name="novaa">NOVA</string>
 </resources>
